17 Group Anagrams alternative - first try and it's working